--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,6 +143,7 @@ a {
     color: inherit;
     text-decoration: none;
     cursor: pointer;
+
 }
 
 ul,
@@ -491,6 +492,10 @@ footer {
             &:hover {
                 background-color: $orange;
                 color: $white;
+
+                a{
+                    color: $white;
+                }
             }
         }
     }
