--- a/css/style.css
+++ b/css/style.css
@@ -1434,7 +1434,7 @@ select:focus {
 }
 
 .form-top {
-  margin-bottom: 30px;
+  margin-bottom: 1.5rem;
 }
 
 .form-top .form-name {
@@ -1842,7 +1842,7 @@ select:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 
 @media (max-width: 991px) {
@@ -2068,6 +2068,7 @@ select:focus {
 
 .carousel-block {
   position: relative;
+  max-height: 200px;
 }
 
 .carousel-block .big-title {
